Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignBoolObjUndefinedField.quorum
class Main
    Boolean v = Test()
    action Main
        if v = undefined
            output "passed"
        end
    end

    action Test() returns Boolean
        return undefined
    end
end