Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjBoolean.quorum
class Main
    action Main
        Boolean v
        v:SetValue(Test())
    end

    action Test() returns Boolean
        boolean var = true
        return var
    end
end